--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "dependencies": {
     "@types/react-transition-group": "^2.0.16",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
+    "cross-env": "^5.2.0",
     "es6-promise": "^4.2.6",
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^5.4.19",
+    "mongoose-mongodb-errors": "0.0.2",
+    "morgan": "^1.9.1",
     "react": "^16.8.3",
     "react-alert": "^5.2.0",
     "react-alert-template-basic": "^1.0.0",
@@ -20,6 +28,9 @@
     "redux-logger": "^3.0.6"
   },
   "scripts": {
+    "server": "supervisor server.js",
+    "dev": "react-scripts start",
+    "prod": "cross-env NODE_ENV=production node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
