--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@types/react-transition-group": "^2.0.16",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "es6-promise": "^4.2.6",
     "express-async-errors": "^3.1.1",
+    "jquery": "^3.4.1",
     "mongoose": "^5.4.19",
     "mongoose-mongodb-errors": "0.0.2",
     "morgan": "^1.9.1",
@@ -24,8 +26,10 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.5",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "server": "supervisor server.js",
